<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.mrntlu.projectconsumer.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_navigation_movie_to_movieListFragment"
            app:destination="@id/movieListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.mrntlu.projectconsumer.ui.tv.TVSeriesFragment"
        android:label="@string/title_tv"
        tools:layout="@layout/fragment_tv_series" />

    <fragment
        android:id="@+id/navigation_anime"
        android:name="com.mrntlu.projectconsumer.ui.anime.AnimeFragment"
        android:label="@string/title_anime"
        tools:layout="@layout/fragment_anime" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.mrntlu.projectconsumer.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />
    <fragment
        android:id="@+id/movieListFragment"
        android:name="com.mrntlu.projectconsumer.ui.movie.MovieListFragment"
        android:label="fragment_movie_list"
        tools:layout="@layout/fragment_movie_list" >
        <argument
            android:name="fetchType"
            app:argType="string"
            android:defaultValue="popular" />
    </fragment>
</navigation>