<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie.MovieDetailsAboutFragment"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/detailsGenreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/genres"
        android:textColor="?attr/descriptionTitleTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailsGenreRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingHorizontal="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/plot"
        android:textColor="?attr/descriptionTitleTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp" />

    <io.github.glailton.expandabletextview.ExpandableTextView
        android:id="@+id/detailsDescriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?attr/mainTextColor"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        app:animDuration="500"
        app:collapsedLines="5"
        app:ellipsizeTextColor="@color/blue900"
        app:isExpanded="false"
        app:readLessText="Hide"
        app:readMoreText="Expand"
        app:textMode="line"
        tools:text="Yuku is a young jaksdjasjdajsdja sdjajdajsdajsdj asjdasjdajsdjasd jasjdajsdajsdjasdj" />

    <TextView
        android:id="@+id/detailsRecommendationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/recommendations"
        android:textColor="?attr/descriptionTitleTextColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailsRecommendationRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingHorizontal="16dp"/>

    <TextView
        android:id="@+id/detailsProductionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/production"
        android:textColor="?attr/descriptionTitleTextColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailsProductionRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingHorizontal="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tmdbButton"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:backgroundTint="#04243f"
            android:padding="0dp"
            android:text="@string/tmdb"
            android:textColor="#58bab0"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/imdbButton"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:backgroundTint="#f6c800"
            android:padding="0dp"
            android:layout_marginStart="16dp"
            android:text="@string/imdb"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>